# dav1d

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  TODO  config.asm  config.h  config.mak  configure  exports.version.tmpl  meson.build
cli/: dav1d.c  dav1d_cli_parse.c
common/: attributes.h  bitdepth.h  dump.h  intops.h  mem.h  validate.h
include/: data.h  dav1d.h  meson.build  picture.h  ref.h
include/dav1d/: data.h  dav1d.h  picture.h
input/: input.c  input.h  ivf.c
output/: md5.c  muxer.h  output.c  output.h  y4m2.c
package/crossfiles/: i686-linux32.meson  i686-w64-mingw32.meson  x86_64-w64-mingw32.meson
patches/: 0001-libdav1d-based-AV1-decoder-integration.patch
src/: cdef.c  cdef.h  cdef_apply.c  cdef_apply.h  cdef_apply_tmpl.c  cdef_tmpl.c  cdf.c  cdf.h  data.c  data.h  decode.c  decode.h  dequant_tables.c  dequant_tables.h  env.h  getbits.c  getbits.h  internal.h  intra_edge.c  intra_edge.h  ipred.c  ipred.h  ipred_prepare.c  ipred_prepare.h  itx.c  itx.h  itx_1d.c  itx_tmpl.c  levels.h  lf_apply.c  lf_apply.h  lf_mask.c  lf_mask.h  lib.c  loopfilter.c  loopfilter.h  looprestoration.c  looprestoration.h  lr_apply.c  lr_apply.h  (+29 more)
src/arm/: cdef.h
src/arm/64/: util.S
src/ppc/: itx.h  itx_tmpl.c  utils.h
src/riscv/: ipred.h  mc.h
src/riscv/64/: ipred.S  mc.S
src/x86/: cdef.h  cdef_avx2.asm
tests/: meson.build
tests/checkasm/: cdef.c  checkasm.c
tests/checkasm/x86/: checkasm.asm
tests/libfuzzer/: dav1d_fuzzer.c
tools/: dav1d.c  dav1d_cli_parse.c  dav1d_cli_parse.h  git2version.sh  meson.build  metadata.c  metadata.h
tools/input/: annexb.c  demuxer.h  input.c  input.h  ivf.c
tools/output/: yuv.c
